W1: Solve Optimal Transport problem

--- a/week_1/assignment_1.ipynb
+++ b/week_1/assignment_1.ipynb
@@ -13,14 +13,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "95ed39ba",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-11T16:50:59.414666Z",
-     "iopub.status.busy": "2024-06-11T16:50:59.413758Z",
-     "iopub.status.idle": "2024-06-11T16:50:59.691621Z",
-     "shell.execute_reply": "2024-06-11T16:50:59.688411Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
@@ -43,14 +36,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "f4edecb6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-11T16:50:59.700982Z",
-     "iopub.status.busy": "2024-06-11T16:50:59.699740Z",
-     "iopub.status.idle": "2024-06-11T16:50:59.711541Z",
-     "shell.execute_reply": "2024-06-11T16:50:59.710533Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define a key function to extract the numeric part of each variable name\n",
@@ -106,14 +92,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "ae4b0440",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-11T16:50:59.716053Z",
-     "iopub.status.busy": "2024-06-11T16:50:59.715747Z",
-     "iopub.status.idle": "2024-06-11T16:50:59.960960Z",
-     "shell.execute_reply": "2024-06-11T16:50:59.958545Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -123,7 +102,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/86c39654b9cd400d8928c0576a47e197-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/86c39654b9cd400d8928c0576a47e197-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/c9567510293e4d49a69b4737840e4e2e-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/c9567510293e4d49a69b4737840e4e2e-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 9 COLUMNS\n",
@@ -139,7 +118,7 @@
       "After Postsolve, objective 7, infeasibilities - dual 0 (0), primal 0 (0)\n",
       "Optimal objective 7 - 0 iterations time 0.002, Presolve 0.00\n",
       "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
       "\n",
       "[2.0, 9.0, -4.0]\n",
       "Passed: 3 points!\n"
@@ -167,14 +146,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "8841e2b9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-11T16:50:59.969434Z",
-     "iopub.status.busy": "2024-06-11T16:50:59.968471Z",
-     "iopub.status.idle": "2024-06-11T16:50:59.986458Z",
-     "shell.execute_reply": "2024-06-11T16:50:59.985123Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -184,7 +156,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/4e4de85497ab4fc9aa8288462d0f5246-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/4e4de85497ab4fc9aa8288462d0f5246-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/b8df39c6b09c44e8880c14a1b21aa386-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/b8df39c6b09c44e8880c14a1b21aa386-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 10 COLUMNS\n",
@@ -234,14 +206,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "7f5b3cde",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-11T16:50:59.992246Z",
-     "iopub.status.busy": "2024-06-11T16:50:59.991890Z",
-     "iopub.status.idle": "2024-06-11T16:51:00.006126Z",
-     "shell.execute_reply": "2024-06-11T16:51:00.005014Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -251,7 +216,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/4182fe3c28a14bb1b0a620bb121e2fff-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/4182fe3c28a14bb1b0a620bb121e2fff-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/c4c5a4ff2c1f44d4bceacbe51feb8d48-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/c4c5a4ff2c1f44d4bceacbe51feb8d48-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 9 COLUMNS\n",
@@ -299,14 +264,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "05a8c109",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-11T16:51:00.012032Z",
-     "iopub.status.busy": "2024-06-11T16:51:00.011246Z",
-     "iopub.status.idle": "2024-06-11T16:51:00.029489Z",
-     "shell.execute_reply": "2024-06-11T16:51:00.028326Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -316,7 +274,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/b07e26ce648e40018e8eb162b1b5d416-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/b07e26ce648e40018e8eb162b1b5d416-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/9e4dbc8eec6048ffbbfcf4672f82291d-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/9e4dbc8eec6048ffbbfcf4672f82291d-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 21 COLUMNS\n",
@@ -419,14 +377,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "907a9222",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-11T16:51:00.035796Z",
-     "iopub.status.busy": "2024-06-11T16:51:00.035166Z",
-     "iopub.status.idle": "2024-06-11T16:51:00.053601Z",
-     "shell.execute_reply": "2024-06-11T16:51:00.052463Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -436,7 +387,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/8fc517e55686476c9a84fe41fc89978e-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/8fc517e55686476c9a84fe41fc89978e-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/3a91fb38869b4ef2a00cab447979f519-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/3a91fb38869b4ef2a00cab447979f519-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 13 COLUMNS\n",
@@ -505,17 +456,273 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "3603fa9a",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-11T16:51:00.058357Z",
-     "iopub.status.busy": "2024-06-11T16:51:00.057856Z",
-     "iopub.status.idle": "2024-06-11T16:51:00.063380Z",
-     "shell.execute_reply": "2024-06-11T16:51:00.062329Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert abs(value(lpModel.objective) - 1098.59) <= 0.1, \"Test failed\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1d87e41",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "source": [
+    "## Problem 3: Optimal Transport\n",
+    "\n",
+    "Write down the objective function in terms of $x_{i,j}$ and $D_{i,j}$ for\n",
+    "$1 \\leq i \\leq n$ and $1 \\leq j \\leq m$. Also indicate if we are going to\n",
+    "maximize or minimize it.\n",
+    "\\begin{equation}\n",
+    "\\min \\qquad \\sum_{i=1}^{n} \\sum_{j=1}^{m} x_{i,j} D_{i,j}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Next, for each source location $i$, the total amount of material transported\n",
+    "from $i$ to various destination locations must sum up to $w_i$: the total\n",
+    "weight of material at location $i$. Write down a constraint to enforce this.\n",
+    "\\begin{equation}\n",
+    "\\sum_{j=1}^{m} x_{i,j} = w_i, \\qquad 1 \\leq i \\leq n\n",
+    "\\end{equation}\n",
+    "\n",
+    "Next, for each destination location $j$, the total amount of material\n",
+    "transported to $j$ from various source locations must sum up to $w_{j}^{\\prime}$:\n",
+    "the total weight of material at destination location $j$. Write down a\n",
+    "constraint to enforce this.\n",
+    "\\begin{equation}\n",
+    "\\sum_{i=1}^{n} x_{i,j} = w_{j}^{\\prime}, \\qquad 1 \\leq j \\leq m\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cf152aac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_distance(a, b):\n",
+    "    (xa, ya) = a\n",
+    "    (xb, yb) = b\n",
+    "    return ((xa - xb) ** 2 + (ya - yb) ** 2) ** (1 / 2)\n",
+    "\n",
+    "\n",
+    "def get_objective(var_values, source_coords, dest_coords):\n",
+    "    n = len(source_coords)\n",
+    "    m = len(dest_coords)\n",
+    "    return sum(\n",
+    "        var_values[i][j] * calculate_distance(source_coords[i], dest_coords[j])\n",
+    "        for i in range(n)\n",
+    "        for j in range(m)\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def calculate_optimal_transport_plan(source_coords, source_weights, dest_coords, dest_weights):\n",
+    "    n = len(source_coords)\n",
+    "    assert n == len(source_weights)\n",
+    "    m = len(dest_coords)\n",
+    "    assert m == len(dest_weights)\n",
+    "    assert sum(source_weights) == sum(dest_weights)\n",
+    "\n",
+    "    # Create the LP model\n",
+    "    lp_model = LpProblem(\"OptimalTransport\", LpMinimize)\n",
+    "\n",
+    "    # Create a list of decision variables x_{i,j}\n",
+    "    decision_vars = [[LpVariable(f\"x_{{{i},{j}}}\", lowBound=0) for j in range(m)] for i in range(n)]\n",
+    "\n",
+    "    # Add the objective function\n",
+    "    lp_model += lpSum(\n",
+    "        decision_vars[i][j] * calculate_distance(source_coords[i], dest_coords[j])\n",
+    "        for i in range(n)\n",
+    "        for j in range(m)\n",
+    "    )\n",
+    "\n",
+    "    # Add the constraints\n",
+    "    for i in range(n):\n",
+    "        lp_model += lpSum(decision_vars[i][j] for j in range(m)) == source_weights[i]\n",
+    "    for j in range(m):\n",
+    "        lp_model += lpSum(decision_vars[i][j] for i in range(n)) == dest_weights[j]\n",
+    "\n",
+    "    # Solve and return the solution\n",
+    "    lp_model.solve()\n",
+    "    return [[value(decision_vars[i][j]) for j in range(m)] for i in range(n)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "53bb972f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/e222d17fdcf3440ba5208032e2414780-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /tmp/e222d17fdcf3440ba5208032e2414780-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 10 COLUMNS\n",
+      "At line 29 RHS\n",
+      "At line 35 BOUNDS\n",
+      "At line 36 ENDATA\n",
+      "Problem MODEL has 5 rows, 6 columns and 12 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Presolve 0 (-5) rows, 0 (-6) columns and 0 (-12) elements\n",
+      "Empty problem - 0 rows, 0 columns and 0 elements\n",
+      "Optimal - objective value 52.222806\n",
+      "After Postsolve, objective 52.222806, infeasibilities - dual 0 (0), primal 0 (0)\n",
+      "Optimal objective 52.22280608 - 0 iterations time 0.002, Presolve 0.00\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n",
+      "Objective value: 52.22280607707767\n",
+      "Test Passed: 10 points\n"
+     ]
+    }
+   ],
+   "source": [
+    "source_coords = [(1, 5), (4, 1), (5, 5)]\n",
+    "source_weights = [9, 4, 5]\n",
+    "dest_coords = [(2, 2), (6, 6)]\n",
+    "dest_weights = [9, 9]\n",
+    "n = 3\n",
+    "m = 2\n",
+    "var_values = calculate_optimal_transport_plan(source_coords, source_weights, dest_coords, dest_weights)\n",
+    "obj_val = get_objective(var_values, source_coords, dest_coords)\n",
+    "print(f\"Objective value: {obj_val}\")\n",
+    "\n",
+    "# Check the solution\n",
+    "for i in range(n):\n",
+    "    assert sum(var_values[i][j] for j in range(m)) == source_weights[i]  # pyright: ignore\n",
+    "for j in range(m):\n",
+    "    assert sum(var_values[i][j] for i in range(n)) == dest_weights[j]  # pyright: ignore\n",
+    "\n",
+    "assert abs(obj_val - 52.22) <= 1e-01\n",
+    "print(\"Test Passed: 10 points\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "48fccf4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/57860e6c31ef4942a71df049239cec9f-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /tmp/57860e6c31ef4942a71df049239cec9f-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 16 COLUMNS\n",
+      "At line 107 RHS\n",
+      "At line 119 BOUNDS\n",
+      "At line 120 ENDATA\n",
+      "Problem MODEL has 11 rows, 30 columns and 60 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Presolve 11 (0) rows, 30 (0) columns and 60 (0) elements\n",
+      "Perturbing problem by 0.001% of 6.4031242 - largest nonzero change 3.2339459e-05 ( 0.0012172688%) - largest zero change 0\n",
+      "0  Obj 0 Primal inf 120 (11)\n",
+      "11  Obj 127.19128\n",
+      "Optimal - objective value 127.19048\n",
+      "Optimal objective 127.1904832 - 11 iterations time 0.002\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n",
+      "Objective value: 127.19048316123448\n",
+      "Test Passed: 8 points\n"
+     ]
+    }
+   ],
+   "source": [
+    "source_coords = [(1, 1), (2, 2), (3, 3), (4, 4), (5, 5), (6, 6)]\n",
+    "source_weights = [10, 10, 10, 10, 10, 10]\n",
+    "dest_coords = [(6, 1), (5, 2), (4, 3), (3, 2), (2, 1)]\n",
+    "dest_weights = [12, 12, 12, 12, 12]\n",
+    "n = 6\n",
+    "m = 5\n",
+    "var_values = calculate_optimal_transport_plan(source_coords, source_weights, dest_coords, dest_weights)\n",
+    "obj_val = get_objective(var_values, source_coords, dest_coords)\n",
+    "print(f\"Objective value: {obj_val}\")\n",
+    "\n",
+    "# Check the solution\n",
+    "for i in range(n):\n",
+    "    assert sum(var_values[i][j] for j in range(m)) == source_weights[i]  # pyright: ignore\n",
+    "for j in range(m):\n",
+    "    assert sum(var_values[i][j] for i in range(n)) == dest_weights[j]  # pyright: ignore\n",
+    "\n",
+    "assert abs(obj_val - 127.19) <= 1e-1\n",
+    "print(\"Test Passed: 8 points\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "70ca7d2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/209ce50ebb334c528a72fc003f41848f-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /tmp/209ce50ebb334c528a72fc003f41848f-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 41 COLUMNS\n",
+      "At line 1002 RHS\n",
+      "At line 1039 BOUNDS\n",
+      "At line 1040 ENDATA\n",
+      "Problem MODEL has 36 rows, 320 columns and 640 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Presolve 36 (0) rows, 320 (0) columns and 640 (0) elements\n",
+      "0  Obj 0 Primal inf 400 (36)\n",
+      "31  Obj 1555.645 Primal inf 360 (20)\n",
+      "67  Obj 1597.182 Primal inf 49.999999 (11)\n",
+      "76  Obj 1598.1137\n",
+      "Optimal - objective value 1598.1137\n",
+      "Optimal objective 1598.113667 - 76 iterations time 0.002\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n",
+      "Objective value: 1598.1136673805286\n",
+      "Test Passed: 5 points\n"
+     ]
+    }
+   ],
+   "source": [
+    "source_coords = [(i, 1) for i in range(20)]\n",
+    "source_weights = [10] * 20\n",
+    "dest_coords = [(6, i + 5) for i in range(8)] + [(14, i + 5) for i in range(8)]\n",
+    "dest_weights = [12.5] * 16\n",
+    "n = 20\n",
+    "m = 16\n",
+    "var_values = calculate_optimal_transport_plan(source_coords, source_weights, dest_coords, dest_weights)\n",
+    "obj_val = get_objective(var_values, source_coords, dest_coords)\n",
+    "print(f\"Objective value: {obj_val}\")\n",
+    "\n",
+    "# Check the solution\n",
+    "for i in range(n):\n",
+    "    assert sum(var_values[i][j] for j in range(m)) == source_weights[i]  # pyright: ignore\n",
+    "for j in range(m):\n",
+    "    assert sum(var_values[i][j] for i in range(n)) == dest_weights[j]  # pyright: ignore\n",
+    "\n",
+    "assert abs(obj_val - 1598.11) <= 1e-1\n",
+    "print(\"Test Passed: 5 points\")"
    ]
   }
  ],
