--- a/week_1/assignment_1.ipynb
+++ b/week_1/assignment_1.ipynb
@@ -16,8 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
     "# It's moronic to do this, but I want to avoid problems with the autograder\n",
     "from pulp import *  # pyright: ignore [reportWildcardImportFromLibrary]"
    ]
@@ -39,11 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a key function to extract the numeric part of each variable name\n",
-    "def extract_number(lp_var):\n",
-    "    return int(re.search(r\"\\d+\", lp_var.name).group())  # pyright: ignore [reportOptionalMemberAccess]\n",
-    "\n",
-    "\n",
     "def formulate_lp_problem(m, n, list_c, list_a, list_b):\n",
     "    # Assert that the data is compatible\n",
     "    assert m > 0\n",
@@ -64,8 +57,7 @@
     "\n",
     "    # Create all the constraints\n",
     "    for coeffs, rhs in zip(list_a, list_b):\n",
-    "        lhs = lpSum([c * v for c, v in zip(coeffs, decision_vars)])\n",
-    "        lp_model += lhs <= rhs\n",
+    "        lp_model += lpSum([c * v for c, v in zip(coeffs, decision_vars)]) <= rhs\n",
     "\n",
     "    # Solve the problem and get its status\n",
     "    lp_model.solve()\n",
@@ -79,9 +71,7 @@
     "    if status == \"Optimal\":\n",
     "        is_feasible = True\n",
     "        is_bounded = True\n",
-    "        # Get the model variables in the right order\n",
-    "        lp_vars = sorted(lp_model.variables(), key=extract_number)\n",
-    "        opt_sol = [lp_var.varValue for lp_var in lp_vars]\n",
+    "        opt_sol = [value(decision_vars[i]) for i in range(n)]\n",
     "    elif status == \"Unbounded\":\n",
     "        is_feasible = True\n",
     "\n",
@@ -102,7 +92,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/c9567510293e4d49a69b4737840e4e2e-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/c9567510293e4d49a69b4737840e4e2e-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/3fdf1bfcaabd496e83a069cdb429269a-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/3fdf1bfcaabd496e83a069cdb429269a-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 9 COLUMNS\n",
@@ -136,6 +126,9 @@
     "assert is_feas, \"The LP should be feasible -- your code returns infeasible\"\n",
     "assert is_bnded, \"The LP should be bounded -- your code returns unbounded\"\n",
     "print(sols)\n",
+    "assert sols[0] is not None\n",
+    "assert sols[1] is not None\n",
+    "assert sols[2] is not None\n",
     "assert abs(sols[0] - 2.0) <= 1e-04, \"x0 must be 2.0\"\n",
     "assert abs(sols[1] - 9.0) <= 1e-04, \"x1 must be 9.0\"\n",
     "assert abs(sols[2] + 4.0) <= 1e-04, \"x2 must be -4.0\"\n",
@@ -156,7 +149,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/b8df39c6b09c44e8880c14a1b21aa386-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/b8df39c6b09c44e8880c14a1b21aa386-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/879e6e70e6b34d0d8299ccec616099fa-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/879e6e70e6b34d0d8299ccec616099fa-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 10 COLUMNS\n",
@@ -216,7 +209,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/c4c5a4ff2c1f44d4bceacbe51feb8d48-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/c4c5a4ff2c1f44d4bceacbe51feb8d48-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/2f9ba1b75bcf48d2aa50923be37015c6-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/2f9ba1b75bcf48d2aa50923be37015c6-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 9 COLUMNS\n",
@@ -274,7 +267,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/9e4dbc8eec6048ffbbfcf4672f82291d-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/9e4dbc8eec6048ffbbfcf4672f82291d-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/de08918d78e245f29d439f9566a3dbbc-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/de08918d78e245f29d439f9566a3dbbc-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 21 COLUMNS\n",
@@ -316,8 +309,9 @@
     "assert is_feas, \"Problem is feasible but your code returned infeasible\"\n",
     "assert is_bnded, \"Problem is bounded but your code returned unbounded\"\n",
     "print(sols)\n",
+    "assert sols[6] is not None\n",
     "assert abs(sols[6] - 1.0) <= 1e-03, \"Solution does not match expected one\"\n",
-    "assert all([abs(sols[i]) <= 1e-03 for i in range(n) if i != 6]), \"Solution does not match expected one\"\n",
+    "assert all(abs(sols[i]) <= 1e-03 for i in range(n) if i != 6), \"Solution does not match expected one\"  # pyright: ignore [reportArgumentType]\n",
     "print(\"Passed: 3 points!\")"
    ]
   },
@@ -387,7 +381,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/3a91fb38869b4ef2a00cab447979f519-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/3a91fb38869b4ef2a00cab447979f519-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/d6864d8f39e944b69d8e7daf4f5b89f6-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/d6864d8f39e944b69d8e7daf4f5b89f6-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 13 COLUMNS\n",
@@ -562,7 +556,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/e222d17fdcf3440ba5208032e2414780-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /tmp/e222d17fdcf3440ba5208032e2414780-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/ae57d699c669470bb94d94b6fa2e65f6-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /tmp/ae57d699c669470bb94d94b6fa2e65f6-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 10 COLUMNS\n",
@@ -620,7 +614,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/57860e6c31ef4942a71df049239cec9f-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /tmp/57860e6c31ef4942a71df049239cec9f-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/ca3f1dec176e4d06b31b03ac49431fd2-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /tmp/ca3f1dec176e4d06b31b03ac49431fd2-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 16 COLUMNS\n",
@@ -679,7 +673,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/209ce50ebb334c528a72fc003f41848f-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /tmp/209ce50ebb334c528a72fc003f41848f-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/cf9612b3321f42e3b62f79d81fd12305-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /tmp/cf9612b3321f42e3b62f79d81fd12305-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 41 COLUMNS\n",
