--- a/week_3/max_sat.tex
+++ b/week_3/max_sat.tex
@@ -1,4 +1,4 @@
-% Created 2024-06-16 Sun 18:37
+% Created 2024-06-16 Sun 18:51
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -13,8 +13,6 @@
 \usepackage{capt-of}
 \usepackage{hyperref}
 \usepackage[a4paper,left=1cm,right=1cm,top=1cm,bottom=1cm]{geometry}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
 \usepackage[american]{babel}
 \usepackage[sc]{mathpazo}
 \linespread{1.05}
@@ -31,19 +29,20 @@
 \begin{document}
 
 \maketitle
+\thispagestyle{empty}
 
 \section*{Problem 1}
-\label{sec:orgffad40c}
+\label{sec:orgc587beb}
 \begin{equation}
 4 \cdot \frac{7}{8} = \frac{7}{2} = 3.5
 \end{equation}
 
 \section*{Problem 2}
-\label{sec:orgd521fc5}
+\label{sec:org7898f1e}
 There is a truth assignment that satisfies all the clauses.
 
 \section*{Problem 3}
-\label{sec:orgd9b2d24}
+\label{sec:orge1dd712}
 By setting \(x_1 = \mathrm{T}\), the clauses involving \(x_1\) reduce to
 \begin{eqnarray*}
 x_1 \vee x_2 \vee \overline{x}_4 &=& \mathrm{T} \\
@@ -56,7 +55,7 @@ satisfy is given by
 \end{equation}
 
 \section*{Problem 4}
-\label{sec:org8e27c71}
+\label{sec:org35489a5}
 By setting \(x_1 = \mathrm{F}\), the clauses involving \(x_1\) reduce to
 \begin{eqnarray*}
 x_1 \vee x_2 \vee \overline{x}_4 &=& x_2 \vee \overline{x}_4 \\
@@ -69,6 +68,6 @@ satisfy is given by
 \end{equation}
 
 \section*{Problem 5}
-\label{sec:org0249b24}
+\label{sec:orgf4b347e}
 True
 \end{document}
