--- a/week_3/max_sat.tex
+++ b/week_3/max_sat.tex
@@ -1,4 +1,4 @@
-% Created 2024-06-16 Sun 18:51
+% Created 2024-06-16 Sun 21:05
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -32,42 +32,42 @@
 \thispagestyle{empty}
 
 \section*{Problem 1}
-\label{sec:orgc587beb}
+\label{sec:org4b82ee7}
 \begin{equation}
 4 \cdot \frac{7}{8} = \frac{7}{2} = 3.5
 \end{equation}
 
 \section*{Problem 2}
-\label{sec:org7898f1e}
+\label{sec:org971d99f}
 There is a truth assignment that satisfies all the clauses.
 
 \section*{Problem 3}
-\label{sec:orge1dd712}
+\label{sec:org6046d4a}
 By setting \(x_1 = \mathrm{T}\), the clauses involving \(x_1\) reduce to
 \begin{eqnarray*}
-x_1 \vee x_2 \vee \overline{x}_4 &=& \mathrm{T} \\
+x_1 \vee x_2 \vee \overline{x}_4 &=& \mathrm{T}, \\
 x_1 \vee \overline{x}_2 \vee x_3 &=& \mathrm{T}.
 \end{eqnarray*}
 The other 2 clauses remain unchanged. Then the expected number of clauses we can
 satisfy is given by
 \begin{equation}
-1 + \frac{7}{8} + 1 + \frac{7}{8} = 3 + \frac{3}{4} = 3.75
+1 + \frac{7}{8} + 1 + \frac{7}{8} = 3 + \frac{3}{4} = 3.75.
 \end{equation}
 
 \section*{Problem 4}
-\label{sec:org35489a5}
+\label{sec:org3ca18c3}
 By setting \(x_1 = \mathrm{F}\), the clauses involving \(x_1\) reduce to
 \begin{eqnarray*}
-x_1 \vee x_2 \vee \overline{x}_4 &=& x_2 \vee \overline{x}_4 \\
+x_1 \vee x_2 \vee \overline{x}_4 &=& x_2 \vee \overline{x}_4, \\
 x_1 \vee \overline{x}_2 \vee x_3 &=& \overline{x}_2 \vee x_3.
 \end{eqnarray*}
 The other 2 clauses remain unchanged. Then the expected number of clauses we can
 satisfy is given by
 \begin{equation}
-\frac{3}{4} + \frac{7}{8} + \frac{3}{4} + \frac{7}{8} = \frac{13}{4} = 3.25
+\frac{3}{4} + \frac{7}{8} + \frac{3}{4} + \frac{7}{8} = \frac{13}{4} = 3.25.
 \end{equation}
 
 \section*{Problem 5}
-\label{sec:orgf4b347e}
+\label{sec:org67f1ca4}
 True
 \end{document}
